chore: Fixed Overflow Y scroll in RoutDisp-Utilities

--- a/src/Styles/RoutineDisplay/RoutineDispMain.css
+++ b/src/Styles/RoutineDisplay/RoutineDispMain.css
@@ -116,7 +116,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;   
-    overflow: scroll; 
+    overflow-x: scroll; 
+    overflow-y: hidden;
+    /* chore: Fixed Overflow Y scroll in RoutDisp-Utilities*/
 }
 
 .routineDisplay .middleBar .utilities .options::-webkit-scrollbar {
